--- a/.env
+++ b/.env
@@ -12,8 +12,8 @@ NEXT_PUBLIC_PUSHER_APP_KEY=c47d3614a210e1384818
 PUSHER_APP_ID=1760998
 PUSHER_SECRET=b4d722a1eecddc4a65b2
 
-GITHUB_ID=
-GITHUB_SECRET=
+GITHUB_ID=8cf32555c6fa08e18e5d
+GITHUB_SECRET=2d8b73fa14e4f9e38e7a465fe26c8df0b4992a16
 
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
